Fixed devhaus on tablet

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -197,7 +197,7 @@ a {
   color: white;
   font-size: 1rem;
 }
-.nav a.mobile{
+.nav a.mob{
   padding: 0.5rem 0 1rem 1rem;
   float: left;
   text-decoration: none;
